RESOLVED FIXED187536
[IOS] We should prevent WebProcess suspension while the UIProcess is waiting for a reply from its injected bundle
https://bugs.webkit.org/show_bug.cgi?id=187536
Summary [IOS] We should prevent WebProcess suspension while the UIProcess is waiting ...
Chris Dumez
Reported 2018-07-10 15:53:59 PDT
We should prevent WebProcess suspension while the UIProcess is waiting for a reply from its injected bundle (RemoteObjectRegistry API). Otherwise, the reply block may end up never getting called because the WebProcess was suspended on iOS. We already do this for callbacks on the WebPageProxy, however, RemoteObjectRegistry has is own mechanism which currently does not take any process assertions.
Attachments
Patch (10.76 KB, patch)
2018-07-10 16:05 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-07-10 15:54:16 PDT
Chris Dumez
Comment 2 2018-07-10 16:05:17 PDT
WebKit Commit Bot
Comment 3 2018-07-10 17:09:18 PDT
Comment on attachment 344729 [details] Patch Clearing flags on attachment: 344729 Committed r233713: <https://trac.webkit.org/changeset/233713>
WebKit Commit Bot
Comment 4 2018-07-10 17:09:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.